[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/images/Fase_1/sky night.png" type="Texture" id=1]
[ext_resource path="res://assets/scenes/background.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/scripts/credits.gd" type="Script" id=3]
[ext_resource path="res://assets/audios/menu_btn.MP3" type="AudioStream" id=4]
[ext_resource path="res://assets/audios/menu_select.MP3" type="AudioStream" id=5]
[ext_resource path="res://assets/themes/label.tres" type="Theme" id=6]
[ext_resource path="res://assets/themes/pause_menu_btn.tres" type="Theme" id=7]

[sub_resource type="Animation" id=1]
resource_name = "load_in"
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "load_out"
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0, 0, 0, 1 ) ]
}

[node name="credits" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
expand = true

[node name="background" parent="." instance=ExtResource( 2 )]
position = Vector2( 0, 154 )
scale = Vector2( 1.3, 1.3 )
z_index = 10

[node name="background2" parent="." instance=ExtResource( 2 )]
position = Vector2( 2496, 154 )
scale = Vector2( 1.3, 1.3 )
z_index = 10

[node name="Menu" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 20.0
margin_right = -20.0
margin_bottom = -20.0

[node name="Label" type="Label" parent="Menu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -91.0
margin_top = -16.5
margin_right = 91.0
margin_bottom = 132.5
grow_horizontal = 2
theme = ExtResource( 6 )
text = "Feito por:
Pedro Brown
e
Samuel Maia"
align = 1
valign = 1

[node name="Button_Menu" type="Button" parent="Menu"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -76.0
margin_top = -31.0
grow_horizontal = 0
grow_vertical = 0
theme = ExtResource( 7 )
text = "MENU"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "load_in"
anims/load_in = SubResource( 1 )
anims/load_out = SubResource( 2 )

[node name="audio_btn" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="audio_select" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[connection signal="focus_entered" from="Menu/Button_Menu" to="." method="_on_Button_Menu_focus_entered"]
[connection signal="mouse_entered" from="Menu/Button_Menu" to="." method="_on_Button_Menu_mouse_entered"]
[connection signal="pressed" from="Menu/Button_Menu" to="." method="_on_Button_Menu_pressed"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
